# flowerMD

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  P3HT.mol2  P3HT.xml  README.md  Units exercise.ipynb  codecov.yml  environment-cpu.yml  environment-dev.yml  environment-gpu.yml  environment-nohoomd.yml  environment-readthedocs.yml  environment.yml  p3ht_init.ipynb  pyproject.toml  sample_run.py  setup.py
.github/workflows/: draft-pdf.yml  main.yml  pytest.yml
containers/: dockerfile
docs/: conf.py  index.rst  molecule.rst  requirements.txt
docs/source/: .library.rst.swp  .utils.rst.swp  base.rst  conf.py  forcefields.rst  index.rst  installation.rst  library.rst  modules.rst  (+9 more)
flower/: __init__.py
flowermd/: __init__.py
hoomd_organics/: __init__.py
hoomd_polymers/: __init__.py  forcefields.py  molecules.py  system.py  systems.py  utils.py
jankflow/: __init__.py
notebooks/: Ellipsoids_min_work.ipynb  Ellipsoids_tutorial.ipynb
paper/: paper.bib  paper.md
sim/: simulation.py  weld.py
system/: molecules.py  systems.py
systems/: molecules.py  systems.py
tutorials/: 1-Hoomd-Organics-Basics.ipynb  1-Hoomd-Organics-basics.ipynb  1-flower-basics.ipynb  1-flowerMD-basics.ipynb  2-Hoomd-Organics-advanced.ipynb  2-JankFlow-advanced.ipynb  2-flowerMD-advanced.ipynb  3-coarse-graining.ipynb  3-flowerMD-coarse-graining.ipynb  4-flowerMD-welding.ipynb  5-flowerMD-surface-wetting.ipynb  6-flowerMD-ellipsoids.ipynb  6-flowermd-ML-coarse-graining.ipynb  6-flowermd-coarse-polymer-models.ipynb  Run_MD_Simulation.ipynb  Welding.ipynb
(+174 files in other folders)
